--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black ;
-  color: #eb396f;
+  color: rgb(148, 147, 147);
 }
 
 code {
