--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -11,6 +11,7 @@
     padding-right:25px;
     text-align:right;
     outline:none;
+    background-color: white;
 }
 .calculator button{
     border:none;
@@ -51,7 +52,9 @@
     .calculator button{
         border-radius: 0px;
     }
-    input{
+    .calculator input{
         font-size:1.6rem;
+        background-color: rgba(75, 73, 73, 0.356);
+        color: white;
     }
 }
